# pul_airtable

./: .gitignore  Pipfile  README.md  airtable.py  cli.py  guess.py  ldap.py  main.py  org.json  org_chart_formatter.py  pyproject.toml  src_row.py
staff_management/: __init__.py  earnings_detail_report.py  field_delta.py  field_mapper.py  ldap.py  record_matcher.py  report_row.py  src_row.py  staff_airtable.py  staff_report.py  sync_prompts.py  sync_validator.py
tests/: __init__.py  conftest.py  test_app.py  test_dof_matching.py  test_field_delta.py  test_field_mapper.py  test_record_matcher.py  test_report_row.py  test_staff_airtable.py  test_staff_report.py  test_sync_prompts.py  test_sync_validator.py
