[project]
name = "pul-airtable-staff"
version = "0.1.0"
description = "PUL Staff Management System - Airtable Sync"
requires-python = ">=3.11"
dependencies = [
    "pyairtable>=3.0",
    "pydantic<2.10",
    "click>=8.1",
]

[project.scripts]
pul-staff = "cli:main"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.7",
    "black>=24.0",
    "isort>=5.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring test Airtable",
]

[tool.mypy]
files = ["staff_management", "cli.py", "main.py"]
strict = true

[tool.pyright]
# MyPy can infer these, but pyright cannot; this just removes the error 
# highlights and VSCode.
reportUnknownMemberType = false
reportPossiblyUnboundVariable = false

[tool.black]
line-length = 120
preview = true
quiet = true
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
multi_line_output = 3
force_single_line = true
force_sort_within_sections = true
quiet = true
known_first_party = ["staff_management", "main", "cli"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Local imports"
import_heading_localfolder = "Local folder imports"

[tool.coverage.run]
source = ["staff_management"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__main__.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "pass",
    "# TYPE_CHECKING only imports",
    "raise ImportError",
    "except ImportError",
]

[tool.pdm.scripts]
black = { cmd = "black ." }
isort = { cmd = "isort ." }
test = { cmd = "pytest tests/ -v --cov=staff_management --cov=main --cov-report=term-missing" }
mypy = { cmd = "mypy --pretty --no-incremental --warn-unused-configs" }
format = { composite = [ "black", "isort" ] }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
